--- a/www/faq.html
+++ b/www/faq.html
@@ -70,82 +70,111 @@
         <h2>Sobre QueHosting.es</h2>
 
           <p>
-            <a data-toggle="collapse" href="#collapse1" aria-expanded="false" aria-controls="collapse1">¿Qué es QueHosting.es?</a>
+            <a data-toggle="collapse" href="#about1" aria-expanded="false" aria-controls="about1">¿Qué es QueHosting.es?</a>
           </p>
-          <div class="collapse" id="collapse1">
+          <div class="collapse" id="about1">
             QueHosting.es es un proyecto que nace para proporcionar una herramienta fácil de usar y gratuita que ayude a elegir <strong>alojamiento web</strong> para proyectos de cualquier tamaño, tanto personales como de empresa.<br /> 
           </div>
 
           <p>
-            <a data-toggle="collapse" href="#collapse2" aria-expanded="false" aria-controls="collapse2">¿Por qué QueHosting.es?</a>
+            <a data-toggle="collapse" href="#about2" aria-expanded="false" aria-controls="about2">¿Por qué QueHosting.es?</a>
           </p>
-          <div class="collapse" id="collapse2">
+          <div class="collapse" id="about2">
             Hoy en día la mayoría de los resultados de búsqueda para <strong>comparar entre diferentes planes de hosting</strong> son directamente entradas a blogs que realizan comparaciones, en ocasiones muy exhaustivas y profesionales, pero sólo entre unos pocos proveedores.
             Desde QueHosting.es creemos que podría ser útil para la comunidad contar con un comparador lo más simple posible, que ayude a filtar resultados y tener una mejor visibilidad de un número significativamente mayor de <strong>planes de hosting entre los que comparar</strong>.  
           </div>
 
           <p>
-            <a data-toggle="collapse" href="#collapse3" aria-expanded="false" aria-controls="collapse3">¿Cómo funciona QueHosting.es?</a>
+            <a data-toggle="collapse" href="#about3" aria-expanded="false" aria-controls="about3">¿Cómo funciona QueHosting.es?</a>
           </p>
-          <div class="collapse" id="collapse3">
+          <div class="collapse" id="about3">
             Desde la <a href="index.html">página de inicio</a>, se ofrece un sencillo filtro de búsqueda para poder encontrar el alojamiento que mejor se adapte a las necesidades del usuario. Tan símple como eso.
           </div>
 
           <p>
-            <a data-toggle="collapse" href="#collapse4" aria-expanded="false" aria-controls="collapse4">No veo muchas opciones en QueHosting.es. ¿Por qué?</a>
+            <a data-toggle="collapse" href="#about4" aria-expanded="false" aria-controls="about4">No veo muchas opciones en QueHosting.es. ¿Por qué?</a>
           </p>
-          <div class="collapse" id="collapse4">
+          <div class="collapse" id="about4">
             Pues porqué estamos en una fase muy inicial del proyecto, lo que se conoce como estar en fase "beta". Poco a poco iremos añadiendo <strong>opciones de filtro</strong> en la web, así como <strong>planes de alojamiento y proveedores</strong>.
           </div>
 
           <p>
-            <a data-toggle="collapse" href="#collapse5" aria-expanded="false" aria-controls="collapse5">¿Qué gana QueHosting.es con todo ésto?</a>
+            <a data-toggle="collapse" href="#about5" aria-expanded="false" aria-controls="about5">¿Qué gana QueHosting.es con todo ésto?</a>
           </p>
-          <div class="collapse" id="collapse5">
+          <div class="collapse" id="about5">
             En QueHosting.es contamos con un programa de afiliación para algunos de los proveedores de hosting que listamos. Cuando realizas una contratación a través de alguno de los resultados de búsqueda, es posible que QueHosting.es reciba una pequeña compensación por ello, sin que ésto afecte en ningún caso al precio que se pagaría al contratar el alojamiento por otras vías. Es importante recalcar que QueHosting.es no adapta los resultados de búsqueda para favorecer a los proveedores con los que se tiene una relación de afiliación.
           </div>
 
         <h2>Sobre los resultados de búsqueda</h2>
 
           <p>
-            <a data-toggle="collapse" href="#collapse6" aria-expanded="false" aria-controls="collapse6">¿Adapta QueHosting.es los resultados de búsqueda para poder ganar más dinero?</a>
+            <a data-toggle="collapse" href="#results1" aria-expanded="false" aria-controls="results1">¿Adapta QueHosting.es los resultados de búsqueda para poder ganar más dinero?</a>
           </p>
-          <div class="collapse" id="collapse6">
+          <div class="collapse" id="results1">
             Desafortunadamente, en esta fase del proyecto QueHosting.es no gana dinero. Pero en cualquier caso, no adaptamos ningún resultado de búsqueda ni de filtro para favorecer la (pobre) economía del equipo de QueHosting.es.
           </div>
 
           <p>
-            <a data-toggle="collapse" href="#collapse7" aria-expanded="false" aria-controls="collapse7">Diferencia de precio entre resultado y contratación</a>
+            <a data-toggle="collapse" href="#results2" aria-expanded="false" aria-controls="results2">El precio indicado en un resultado no se corresponde con el de la web del plan</a>
           </p>
-          <div class="collapse" id="collapse7">1- datos desactualizados (ofertas o simplemente cambios de precio)
-             2- precio varía en función del número de meses contratados
+          <div class="collapse" id="results2">
+            En QueHosting.es teníamos dudas sobre la mejor forma de presentar los detalles del precio de los planes, pues para un mismo plan, se suelen dar varios precios en función del tiempo que se va a contratar ese plan. Pagarás mucho menos mensualmente al contratar 4 años que al pagar mes a mes.<br />
+            En estos momentos los resultados de las búsquedas siempre darán el mejor precio para ese plan, pero estamos trabajando para intentar presentar de forma ordenada todas las posibilidades de precios sin que ésto haga de los resultados algo demasiado confuso.
+          </div>
+
+          <p>
+            <a data-toggle="collapse" href="#results3" aria-expanded="false" aria-controls="results3">He encontrado algún dato erroneo para algún resultado de búsqueda</a>
+          </p>
+          <div class="collapse" id="results3">
+            La frecuencia de actualización de los datos de QueHosting.es puede variar, y en cualquier caso puede no reflejar los cambios en los detalles de un plan de forma instantanea. Así que es posible que haya algún dato para algún plan que aun no se haya actualizado o incluso que se haya importado en nuestra base de datos con algún error. Es por eso que es siempre importante revisar de nuevo los detalles de un plan en el momento de la contratación.  
           </div>
 
         <h2>Sobre las opciones de búsqueda</h2>
 
           <p>
-            <a data-toggle="collapse" href="#collapse8" aria-expanded="false" aria-controls="collapse8">No sé nada de hostings, ¿por dónde empiezo?</a>
+            <a data-toggle="collapse" href="#options1" aria-expanded="false" aria-controls="options1">No sé nada de hostings, ¿por dónde empiezo?</a>
           </p>
-          <div class="collapse" id="collapse8">
-            TODO asdasdas adsdasdasd asdsadads.
+          <div class="collapse" id="options1">
+            Lo primero quizá sea tener claro qué <strong>presupuesto mensual</strong> tienes. Recuerda que el precio mostrado en QueHosting.es es por defecto <strong>el mejor precio</strong> para cada uno de los hostings, que se suele corresponder con la permanencia mayor.<br />
+            Después podríamos preguntarnos qué tipo de proyecto tenemos entre manos, si se trata de una pequeña prueba de concepto que no va a ir a más, un proyecto personal que esperamos vaya a ir creciendo o algo más corporativo con lo que necesitaríamos un soporte técnico profesional y ciertas garantías en el servicio.<br />
+            Si no tenemos demasiados conocimientos técnicos, podría ser interesante que el plan de alojamiento incluyera un <strong>dominio</strong> en el precio, por la comodidad de gestionarlo todo desde el mismo proveedor.
           </div>
 
           <p>
-            <a data-toggle="collapse" href="#collapse9" aria-expanded="false" aria-controls="collapse9">¿Merece la pena contratar un hosting gratuito?</a>
+            <a data-toggle="collapse" href="#options2" aria-expanded="false" aria-controls="options2">¿Merece la pena contratar un hosting gratuito?</a>
           </p>
-          <div class="collapse" id="collapse9">
+          <div class="collapse" id="options2">
             Todo depende del tipo de proyecto que quieras alojar. En ocasiones, los <strong>hosting gratis</strong> incluyen publicidad (a veces encubierta) o no ofrecen todas las funciones que encontrarías en un hosting de pago, como pueden ser el soporte para versiones específicas de PHP. Normalmente se caracterizan por ofrecer recursos limitados comno poco espacio en disco o poca memoria RAM. Sin embargo, para proyectos personales pequeños o pruebas de concepto, pueden funcionar muy bien.
           </div>
 
           <p>
-            <a data-toggle="collapse" href="#collapse10" aria-expanded="false" aria-controls="collapse10">¿Qué es un "Tipo de Hosting" y qué tipos hay?</a>
+            <a data-toggle="collapse" href="#options3" aria-expanded="false" aria-controls="options3">¿Qué es un "Tipo de Hosting" y qué tipos hay?</a>
           </p>
-          <div class="collapse" id="collapse10">TODO</div>
+          <div class="collapse" id="options3">En el mundo del hosting existen diversos <strong>tipos de hosting</strong> en funciónd el tipo de proyecto a alojar. Por ejemplo, si vas a usar una solución popular como <strong>WordPress</strong>, prácticamente todos los proveedores ofrecerán planes pensados específicamente para alojar este tipo de proyectos, haciendo la gestión del mismo algo mucho más sencillo para el usuario. A grandes rasgos, tendríamos los siguientes <strong>tipos de hosting</strong>:
+            <ul>
+              <li><strong>WordPress</strong>: con WordPress pre-instalado, pensado para alojar sitios web WordPress.</li>
+              <li><strong>eCommerce</strong>: con alguna solución de e-commerce preinstalada, pensada para alojar webs de comercio electrónico.</li>
+              <li><strong>VPS</strong>: servidor privado virtual, no compartido, con acceso de administrador (root) para gestionar todos los detalles; desde el sistema operativo hasta la configuración del servidor de aplicaciones.</li>
+              <li><strong>Web</strong>: servidor con un servidor de aplicaciones web Apache o similar, listo para alojar páginas web con tecnologías como HTML, PHP o MySQL, o tu incluso tu propio CMS compatible.</li>
+              <li><strong>Reseller</strong>: servidores gestionados con diferentes cuentas para tus clientes.</li>
+              <li><strong>Dedicado</strong>: servidor físico dedicado, con todos los recursos del mismo disponibles y acceso de root.</li> 
+              <li><strong>Cloud/ElasticCloud</strong>: servidor privado virtual ampliable en caliente.</li>
+              <li><strong>Wizard/Asistente</strong>: Creador de páginas web. Plan de hosting que incluye un asistente para facilitar la creación de páginas web. Ideal para aquellos que no tienen conocimientos técnicos ni quieren contratar un desarrollo web a medida.</li>										
+            </ul>
+          </div>
 
           <p>
-            <a data-toggle="collapse" href="#collapse11" aria-expanded="false" aria-controls="collapse11">¿Qué son las opciones de "dominio web" del filtro de QueHosting.es?</a>
+            <a data-toggle="collapse" href="#options4" aria-expanded="false" aria-controls="options4">¿Qué son las opciones de "dominio web" del filtro de QueHosting.es?</a>
           </p>
-          <div class="collapse" id="collapse11">TODO</div>      
+          <div class="collapse" id="options4">
+            La mayoría de los <strong>planes de alojamiento web</strong> incluyen una de las siguientes opciones referente al dominio:
+            <ul>
+              <li><strong>Dominio no incluído</strong>, con lo que se tendría que contratar a parte ya sea con el mismo proveedor o con cualquier otro.</li>
+              <li><strong>Dominio incluído el primer año</strong>. Como parte de la oferta, muchos planes suelen ofrecer el primer año del dominio totalmente gratuito, pasando a cobrar su coste en los siguientes años si se decidiera mantener el domninio con ese proveedor. Si no se quisiera mantener, siempre se podría contratar con cualquier otro proveedor y mantener el alojamiento en el plan original.</li>
+              <li><strong>Dominio incluído</strong> en el precio, y por tanto, no sería necesario buscar otros proveedores ni realizar pagos adicionales en cuanto al dominio web.</li>
+            </ul>
+            Además del dominio web, prácticamente todos los planes hoy en día ofrecen <strong>certificado SSL gratuito</strong> para poder ofrecer acceso seguro a tu proyecto via HTTPS.
+          </div>      
 
         <p class="float-right"><a href="#">Ir arriba</a></p>
 
