--- a/www/index.html
+++ b/www/index.html
@@ -73,7 +73,7 @@
             <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#523f78"/></svg>
             <div class="container">
               <div class="carousel-caption text-left">
-                <h1>¿Buscas alojamiento web?</h1>
+                <h1>¿Alojamiento web?</h1>
                 <p>¡No busques más y encuentra el <strong style="color: #cbbde2;">plan de hosting</strong> que mejor se adapta a tí usando nuestro <strong style="color: #cbbde2;">comparador</strong>!</p>
               </div>
             </div>
@@ -91,7 +91,7 @@
             <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#523f78"/></svg>
             <div class="container">
               <div class="carousel-caption text-right">
-                <h1>¿Demasiado complicado?</h1>
+                <h1>¿Dudas?</h1>
                 <p>Prueba a pasarte por nuestra sección de preguntas frecuentes</p>
                 <p><a class="btn btn-lg btn-primary" href="faq.html" role="button">Preguntas frecuentes</a></p>
               </div>
@@ -109,9 +109,9 @@
       </div>
 
       <div class="container">
-        <div class="row">
+        <div class="row" id="row-main">
           <!-- https://stackoverflow.com/questions/45394053/how-to-detect-screen-size-or-view-port-on-bootstrap-4-with-javascript/55368012 -->
-          <div class="col-4">
+          <div class="col-4" id="col-search"">
 
             <!-- FORM -->
             <div class='card mb-4 shadow-sm'>
@@ -228,8 +228,8 @@
 
             <!-- // FORM -->
           </div> <!-- // col FILTER-->
-          <div class="col-8">
-            <div id="test-result">Vaya, parece que no hay nada por aquí. Usa el filtro de la izquierda para encontrar tu nuevo plan de hosting.</div>
+          <div class="col-8" id="col-result">
+            <div id="search-result">Vaya, parece que no hay nada por aquí. Usa el filtro de la izquierda para encontrar tu nuevo plan de hosting.</div>
           </div>
 
         </div> <!-- // MAIN row -->
@@ -249,6 +249,7 @@
   
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script><script src="js/bootstrap.bundle.js"></script>
+    <script src="js/viewport.js"></script>
     <script src="js/hosting-compare.js"></script>
   </body>
 </html>
