--- a/www/comparativas/hosting-web.html
+++ b/www/comparativas/hosting-web.html
@@ -4,18 +4,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Comparativa entre los principales proveedores de Hosting para alojar un proyecto WordPress.">
+    <meta name="description" content="Comparativa entre los principales proveedores de Hosting para alojar un proyecto Web.">
     <meta name="author" content="Adrian Perez">
     <meta property="og:locale" content="es_ES" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Comparativa Hosting WordPress" />
-    <meta property="og:description" content="Comparativa entre los principales proveedores de Hosting para alojar un proyecto WordPress." />
+    <meta property="og:description" content="Comparativa entre los principales proveedores de Hosting para alojar un proyecto Web." />
     <meta property="og:url" content="https://quehosting.es/" />
     <meta property="og:site_name" content="Comparativa Hosting España" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:label1" content="Tiempo de lectura" />
     <meta name="twitter:data1" content="2 minutos" />
-    <title>Comparativa Hosting WordPress</title>
+    <title>Comparativa Hosting Web</title>
 
     <link rel="canonical" href="https://quehosting.es">
 
@@ -36,7 +36,7 @@
         },{
           "@type": "ListItem",
           "position": 3,
-          "name": "Hosting WordPress"
+          "name": "Hosting Web"
         }]
       }
     </script>
@@ -106,18 +106,18 @@
 
       <div class="container">
         
-        <h1 style="margin: 100px 0px 50px 0px;">Comparativa Hosting WordPress</h1>
-        <h2>¿Qué es un hosting WordPress?</h2>
+        <h1 style="margin: 100px 0px 50px 0px;">Comparativa Hosting Web</h1>
+        <h2>¿Qué es un hosting Web?</h2>
 
         <div style="margin: 50px 0px 50px 0px;">
-          <p><strong>WordPress</strong> es sin duda alguna la aplicación más usada para la creación de todo tipo de páginas web. Si bien en sus inicios era una herramienta que facilitaba la creación de páginas personales o blogs, la aparición de decenas de miles de plugins, temas y extensiones hacen que hoy en día encontremos páginas web hechas con <strong>WordPress</strong> para prácticamente cualquier caso, incluyendo e-commerce, blogs, catálogos o páginas de empresa o proyectos.</p>
-          <p>Mayormente, el éxito de WordPress se debe a su facilidad de uso; cualquiera pese a no tener conocimientos de informática puede crear su propia web con WordPress, aunque si bien es cierto que con conocimientos técnicos se podrá llevar un proyecto <strong>WordPress</strong> al siguiente nivel.</p>
-          <p>Es por su popularidad y por tanto por su alta demanda, que los planes de alojamiento específicamente para <strong>WordPress</strong> se encuentran presentes en todo buen proveedor de hosting que se precie, siendo de los más demandados por los usuarios. Éstos suelen ofrecer alojamiento con <strong>WordPress</strong> ya pre-instalado, con lo que el usuario únicamente debería centrarse en su personalización para poder empezar ya a subir contenido a su sitio web.</p>
-          <p>En el <strong>comparador de hostings</strong> de <a href="https://quehosting.es">quehosting.es</a> podrás buscar por planes de hosting específicos para <strong>WordPress</strong> entre los que podrás comparar precios y características para escoger el que mejor se adapte a tus necesidades, de entre proveedores de tanto renombre como:</p>  
+          <p>No hay ningún proveedor de hosting que no ofrezca planes de alojamiento para <strong>Hosting Web</strong>, aunque algunos usan otros nombres como <strong>Hosting SSD</strong> o símplemente <strong>Hosting Compartido</strong>. Se les llame de una manera o de otra, un <strong>Hosting Web</strong> no es más que un Hosting con un servidor web instalado listo para alojar páginas web. Este servidor web (también llamado "HTTP") puede ser un <a href="https://es.wikipedia.org/wiki/Servidor_HTTP_Apache" target="_blank">Apache</a>, un <a href="https://es.wikipedia.org/wiki/Nginx" target="_blank">Nginx</a> o cualquier otro, aunque al usuario normalmente no le afectará que su proveedor use un servidor web u otro.</p>
+          <p>Así pues, este tipo de alojamientos, típicamente ofrecerán un acceso FTP al servidor, donde deberemos subir nuestras páginas web, sin importarnos demasiado de la configuración del servidor HTTP. Así pues, al contrario que un <a href="https://quehosting.es/comparativas/hosting-wordpress.html">Hosting WordPress</a>, donde ya contaremos con un WordPress preinstalado y con el que ya podríamos empezar a publicar contenido, en un <strong>Hosting Web</strong> deberemos crear nosotros nuestras páginas web antes de poder publicar nada.</p>
+          <p>Cabe destacar que la mayoría de <strong>Hosting Web</strong> ofertados ofrecen servidores HTTP configurados para alojar proyectos PHP, además de cualquier sitio estático (HTML, css y/o javascript). Si estás pensando en alojar un proyecto propio, desarrollado con tecnología PHP, es importante conocer las versiones de PHP que soporta el aloamiento, para asegurarte de que el proyecto no tendrá problemas de compatibilidad de versiones.</p>
+          <p>En <a href="https://quehosting.es">quehosting.es</a> podrás comparar entre decenas de planes de alojamiento web, de entre proveedores como:</p>
         </div>
         
         <table class="table">
-          <caption>Hosting WordPress</caption>
+          <caption>Hosting Web</caption>
           <tr>
             <th>Proveedor</th>
             <th>Planes WordPress</th>
@@ -125,18 +125,13 @@
           </tr>
           <tr>
             <td>Hostinger</td>
-            <td>Starter, Premium o Enterprise</td>
-            <td>desde 1.99€</td>
-          </tr>
-          <tr>
-            <td>BlueHost</td>
-            <td>Basic, Plus o Gestionado</td>
-            <td>desde 3.27€</td>
+            <td>Sencillo, Premium o Empresarial</td>
+            <td>desde 0.99€</td>
           </tr>
           <tr>
             <td>Hostinet</td>
-            <td>WordPress 1, 2 o 3</td>
-            <td>desde 4.43€</td>
+            <td>Básico, SSD1, 2, 3 o 4</td>
+            <td>desde 3.07€</td>
           </tr>
           <tr>
             <td>Raiola Networks</td>
@@ -152,11 +147,6 @@
             <td>WebEmpresa</td>
             <td>Plan M, Plan L o Plan XL</td>
             <td>desde 6.58€</td>
-          </tr>
-          <tr>
-            <td>TropicalServer</td>
-            <td>S, M, L o XL</td>
-            <td>desde 7.41€</td>
           </tr>
         </table>
       </div><!-- /.container -->
